--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -188,6 +188,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="5dp"
         android:buttonTint="@color/blackColor"
         android:onClick="saveUserEmailPassword"
         android:text="Remember my email and password"
