--- a/app/src/main/res/layout/activity_register__org__admin.xml
+++ b/app/src/main/res/layout/activity_register__org__admin.xml
@@ -8,6 +8,23 @@
     tools:context="org.kashmirworldfoundation.WildlifeGeoSnap.RegisterOrgAdminActivity">
 
 
+    <EditText
+        android:id="@+id/AdminPassword2"
+        android:layout_width="300dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#FAFAFA"
+        android:ems="10"
+        android:fontFamily="sans-serif"
+        android:hint="Re-enter Password:"
+        android:inputType="textPassword"
+        android:textColorHint="@color/blackColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/AdminPassword" />
+
     <TextView
         android:id="@+id/textView5"
         android:layout_width="274dp"
@@ -50,14 +67,14 @@
         android:layout_height="51dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="16dp"
-        android:ems="10"
         android:backgroundTint="#FAFAFA"
+        android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Job:"
         android:inputType="text"
         android:textColorHint="@color/blackColor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AdminPhone" />
 
@@ -66,7 +83,7 @@
         android:layout_width="300dp"
         android:layout_height="51dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
@@ -84,15 +101,16 @@
         android:layout_height="51dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="16dp"
-        android:ems="10"
         android:backgroundTint="#FAFAFA"
+        android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Phone Number:"
         android:inputType="phone"
         android:textColorHint="@color/blackColor"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/AdminPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/AdminPassword2" />
 
     <EditText
         android:id="@+id/AdminPassword"
@@ -133,22 +151,23 @@
         android:layout_width="175dp"
         android:layout_height="41dp"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="28dp"
         android:background="#FFFF8D"
         android:backgroundTint="@color/grayColor"
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"
         android:fontFamily="sans-serif"
         android:text="REGISTER"
         android:textColor="#1B1A1A"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:bottomLeftRadius="20dp"
-        android:bottomRightRadius="20dp"
         android:topLeftRadius="20dp"
         android:topRightRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AdminJob"
         app:strokeColor="@color/blackColor"
-        app:strokeWidth="0.8dp"/>
+        app:strokeWidth="0.8dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
