--- a/app/src/main/res/layout/activity_register_org.xml
+++ b/app/src/main/res/layout/activity_register_org.xml
@@ -46,48 +46,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/Region"
-        android:layout_width="300dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#FAFAFA"
-        android:ems="10"
-        android:fontFamily="sans-serif"
-        android:hint="Region"
-        android:inputType="text"
-        android:textColorHint="@color/blackColor"
-        app:layout_constraintBottom_toTopOf="@+id/RegisterB"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <Spinner
         android:id="@+id/countries"
         android:layout_width="300dp"
         android:layout_height="51dp"
         android:layout_marginStart="100dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
         android:spinnerMode="dropdown"
-        app:layout_constraintBottom_toTopOf="@+id/Region"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/OrgPhone" />
 
     <EditText
         android:id="@+id/orgwebsite"
         android:layout_width="300dp"
         android:layout_height="51dp"
         android:layout_marginStart="100dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Organization Website"
         android:inputType="text"
         android:textColorHint="@color/blackColor"
-        app:layout_constraintBottom_toTopOf="@+id/OrgPhone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/OrgEmail" />
 
     <EditText
         android:id="@+id/OrgName"
@@ -101,52 +85,50 @@
         android:hint="Organization Name"
         android:inputType="text"
         android:textColorHint="@color/blackColor"
-        app:layout_constraintBottom_toTopOf="@+id/OrgEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <EditText
         android:id="@+id/OrgPhone"
         android:layout_width="300dp"
         android:layout_height="51dp"
         android:layout_marginStart="100dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Phone Number"
         android:inputType="phone"
         android:textColorHint="@color/blackColor"
-        app:layout_constraintBottom_toTopOf="@+id/countries"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/orgwebsite" />
 
     <TextView
         android:id="@+id/logindr"
         android:layout_width="0dp"
         android:layout_height="42dp"
         android:layout_marginStart="60dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="Already Registered Your Organization? Click Here"
         android:textColor="@color/blackColor"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RegisterB" />
 
     <Button
         android:id="@+id/RegisterB"
         android:layout_width="156dp"
         android:layout_height="46dp"
         android:layout_marginStart="80dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="32dp"
         android:background="#FFFF8D"
         android:backgroundTint="@color/grayColor"
         android:bottomLeftRadius="20dp"
@@ -158,9 +140,9 @@
         android:textStyle="bold"
         android:topLeftRadius="20dp"
         android:topRightRadius="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/logindr"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/countries"
         app:strokeColor="@color/blackColor"
         app:strokeWidth="0.8dp" />
 
@@ -169,15 +151,15 @@
         android:layout_width="300dp"
         android:layout_height="51dp"
         android:layout_marginStart="100dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
         android:hint="Organization Email"
         android:inputType="textEmailAddress"
         android:textColorHint="@color/blackColor"
-        app:layout_constraintBottom_toTopOf="@+id/orgwebsite"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/OrgName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
