--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
     <group android:checkableBehavior="single">
+        <item android:id = "@+id/nav_home"
+            android:icon="@drawable/ic_home"
+            android:title="Home" />
         <item android:id = "@+id/nav_profile"
             android:icon="@drawable/ic_profile"
             android:title="Profile" />
@@ -18,6 +21,9 @@
         <item android:id = "@+id/nav_map"
             android:icon="@drawable/ic_map"
             android:title="Map" />
+        <item android:id = "@+id/nav_about"
+            android:icon="@drawable/ic_about"
+            android:title="About" />
         <item android:id = "@+id/nav_logout"
             android:icon="@drawable/ic_logout"
             android:title="Log out" />
