--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -16,7 +16,7 @@
             android:icon="@drawable/ic_add"
             android:title="Add" />
         <item
-            android:id="@+id/nav_widlifeSighting"
+            android:id="@+id/nav_wildlifeSighting"
             android:icon="@drawable/ic_sighting"
             android:title="Wildlife Sighting" />
         <item android:id = "@+id/nav_map"
