--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="left"
         android:id="@+id/nav_view"
+        app:headerLayout="@layout/nav_header"
         app:menu="@menu/drawer_menu"/>
 
 
