--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,9 +27,7 @@
         android:id="@+id/RegisterOrgBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="20dp"
         android:text="New Organization? Register Here"
         android:textColor="@color/blackColor"
         android:textSize="16sp"
@@ -41,24 +39,19 @@
         android:id="@+id/Register0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
         android:layout_marginTop="80dp"
-        android:layout_marginEnd="8dp"
         android:text="New Member? Register Here"
         android:textColor="@color/blackColor"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />
-        //app:layout_constraintTop_toBottomOf="@+id/LoginForget" />
 
     <Button
         android:id="@+id/LoginBtn"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="45dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginTop="12dp"
         android:background="@color/grayColor"
         android:backgroundTint="@color/grayColor"
         android:bottomLeftRadius="20dp"
@@ -71,21 +64,18 @@
         android:topLeftRadius="20dp"
         android:topRightRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LoginForget"
         app:strokeColor="@color/blackColor"
-        app:strokeWidth="0.8dp"/>
-        //app:layout_constraintTop_toBottomOf="@+id/password" />
-
+        app:strokeWidth="0.8dp" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="0dp"
         android:layout_height="42dp"
-        android:layout_marginStart="130dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="64dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
@@ -101,9 +91,9 @@
         android:id="@+id/email"
         android:layout_width="0dp"
         android:layout_height="42dp"
-        android:layout_marginStart="130dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="60dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="64dp"
         android:backgroundTint="#FAFAFA"
         android:ems="10"
         android:fontFamily="sans-serif"
@@ -168,17 +158,12 @@
 
     <TextView
         android:id="@+id/LoginForget"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
-        android:layout_marginEnd="8dp"
-        android:gravity="center"
         android:text="Forgot Password?"
         android:textColor="@color/blackColor"
         android:textSize="16sp"
-
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBox" />
 
@@ -186,19 +171,15 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginTop="12dp"
         android:buttonTint="@color/blackColor"
         android:onClick="saveUserEmailPassword"
         android:text="Remember my email and password"
         android:textColor="@color/blackColor"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/BackgroundLogin"
         app:layout_constraintTop_toBottomOf="@+id/password" />
-
-        app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
